Added search by tags, content types and keywords.